Added saving session in redis

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -134,6 +134,7 @@
     <br>
     <input type="text" name="username" placeholder="Почта" th:value="${login}"/>
     <input type="password" name="password" placeholder="Пароль" th:value="${password}"/>
+    <div style="color: #3498db">remember me:<input type="checkbox" name="remember-me" checked></div>
     <div><input type="submit" value="Авторизоваться" /></div>
     <h4 style="color:grey">Ещё не зарегистрированы?</h4>
     <h3 style="color:grey">↓</h3>
