I can add pdf-file in server

--- a/src/main/resources/templates/pageForAdmin.html
+++ b/src/main/resources/templates/pageForAdmin.html
@@ -165,6 +165,8 @@
         <input type="submit">
     </form>
 </div>
+<br>
+<a href="/admin/workWithPDF"><button>Работа с PDF-файлами</button></a>
 
 
 <script type="text/javascript">
