--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -15,6 +15,7 @@
             width: 100%;
             text-align: center;
             color: #000;
+            color: #000;
         }
         .caption span.border {
             background-color: #111;
