--- a/src/main/resources/templates/fix.html
+++ b/src/main/resources/templates/fix.html
@@ -8,8 +8,8 @@
     <img th:src="@{fixtures/pieChart.jpg}" style="width:100%" alt=""/>
     <img th:src="@{fixtures/lineChart.jpg}" style="width:100%" alt=""/>
     <img th:src="@{fixtures/histogram.jpg}" style="width:100%" alt=""/>
-    <img src="../static/images/histogram.jpg" style="width:100%" alt=""/>
-    <img th:src="@{images/286b6b30-af52-4a23-857a-071bc0951c3atortik.jpg}" style="width:100%"/>
+<!--    <img src="../static/images/histogram.jpg" style="width:100%" alt=""/>-->
+<!--    <img th:src="@{images/286b6b30-af52-4a23-857a-071bc0951c3atortik.jpg}" style="width:100%"/>-->
 
 </body>
 </html>
